<?xml version="1.0"?>
<package format="2">
  <name>sort</name>
  <version>0.0.0</version>
  <description>The sort package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rcdl2222@todo.todo">rcdl2222</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opencv</build_depend>
  <build_export_depend>opencv</build_export_depend>
  <exec_depend>opencv</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>